add dockerfile; change to JDK 17